[project]
name = "htb-readme-stats"
version = "0.1.0"
description = "Static Hack The Box README stats cards generated with GitHub Actions and GitHub Pages."
requires-python = ">=3.10"
dependencies = ["requests>=2.32.0", "beautifulsoup4>=4.12.3"]

[project.scripts]
htb-readme-stats = "htb_readme_stats.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
